Relationモデルのis_deleteカラムを削除したことによる改修

--- a/app/templates/article/follower.html
+++ b/app/templates/article/follower.html
@@ -120,7 +120,7 @@
                         <a class="flex-sm-fill text-sm-center nav-link" href="{% url 'account:following' user_id %}">フォロー中</a>
                         <a class="flex-sm-fill text-sm-center nav-link active" href="{% url 'account:follower' user_id %}">フォロワー</a>
                     </nav>
-                <!-- /.card-header -->
+                <!-- /.card-body -->
                 <div class="card-body p-0">
                   <table class="table table-hover">
                     <col width="20%">
