--- a/app/templates/article/message.html
+++ b/app/templates/article/message.html
@@ -127,8 +127,8 @@ $(function(){
             <br>
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
               <a class="nav-link" id="v-pills-home-tab" href="{% url 'article:article' %}" role="tab" >Home</a>
-              <a class="nav-link" id="v-pills-profile-tab" href="#v-pills-profile" role="tab">Profile</a>
-              <a class="nav-link active" id="v-pills-messages-tab" href="#v-pills-messages" role="tab">Messages</a>
+              <a class="nav-link" id="v-pills-profile-tab" href="{% url 'account:profile' login_user_id %}" role="tab">Profile</a>
+              <a class="nav-link active" id="v-pills-messages-tab" href="{% url 'messages:talkroom' %}" role="tab">Messages</a>
               <a class="nav-link" id="v-pills-settings-tab" href="#v-pills-settings" role="tab">Settings</a>
             </div>
           </div>
